tests/cases/modules/ok/file-inline-bridge-main.ari
mod file_inline_bridge;

fn main() -> i64 {
  return file_inline_bridge::run();
}
