tests/cases/modules/errors/private-module-use.ari
mod Secret {
  fn value() -> i64 {
    return 1;
  }
}

use Secret::value as hidden

fn main() -> i64 {
  return hidden();
}
